refactor: 💡 reformat code and simplify some old code apis